<resources>
    <string name="app_name">CrudCar</string>
    <string name="add_new_car">Add new car</string>
    <string name="name">Name</string>
    <string name="mark">Mark</string>
    <string name="model">Model</string>
    <string name="transmission">Procesador</string>
    <string name="combustible">Memoria</string>
    <string name="year">Year</string>
    <string name="add_car">Add Cop</string>
    <string name="image_car_url">Image car url</string>
    <string name="update_car">Update car</string>
    <string name="CrudComp">CrudComp</string>
</resources>
