<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size_15"
    android:layout_height="match_parent">

   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <ImageView
               android:id="@+id/image"
               android:layout_width="@dimen/size_100"
               android:layout_height="@dimen/size_100" />

           <LinearLayout
               android:layout_width="wrap_content"
               android:orientation="vertical"
               android:padding="@dimen/size_5"
               android:layout_height="wrap_content">
               <TextView
                   android:textColor="@color/colorPrimary"
                   android:id="@+id/name"
                   android:text="@string/name"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

               <TextView
                   android:id="@+id/mark"
                   android:text="@string/mark"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

               <TextView
                   android:id="@+id/model"
                   android:text="@string/model"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

               <TextView
                   android:id="@+id/transmission"
                   android:text="@string/transmission"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

               <TextView
                   android:id="@+id/combustible"
                   android:text="@string/combustible"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
               <TextView
                   android:id="@+id/year"
                   android:text="@string/year"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
           </LinearLayout>

       </LinearLayout>
   </android.support.v7.widget.CardView>

</LinearLayout>